--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-20180309-beta4
+20180314 WhiteDay
 - Implement #40: Enhance error message to include current page number for tags and member.
 - Fix Issue #194: Add retry when exporting bookmark.
 - Fix Issue #294: Update root path for both image and manga pages.
@@ -19,6 +19,7 @@
 - Merge #328: Feature/python3 print format
 - Fix #339: Local file checking logic.
 - Fix #340: Database file cleanup check.
+- Fix #341: Update image parser.
 - Update test cases.
 
 20180218
