update changelog and vers

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+20181005-alpha1
+- Start Implement #402: allow download from pixiv Fanbox.
+  - Use 'f1' to download from the artists you following.
+  - Use 'f2' to download specific artist you want to download. Please note you need to follow the artist Fanbox, else it will only get the free post.
+  - Limitation:
+    - Somehow the file size detection doesn't works, so the overwrite feature is disabled.
+    - The original url is modified for compatibility when generating the local filename.
+    - Currently only support 'text', 'image', and 'file' post type.
+
 20180928
 - Fix Issue #415: change 'or' to 'and', reformat code to conform pep8.
 - Fix Issue #416: sort the imagelist as int.
