--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20190416
+- Implement #468: add sorting order for download bookmarked images.
+- Implement #480: update API url.
+
 20190401
 - Implement #476: FANBOX support for video post.
 
