--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-20190528
+20190529
 - Fix Issue #494: update fanbox next page url handling.
+- Add option to skip SSL verification for OAuth (useful in debugging).
 
 20190523
 - Update #493: update fanbox parser to support vimeo content provider.
