--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+20190712
+- Implement #490: Show current and total member id in the title.
+- Fix Issue #503: skip remote file size if server return error 404 or 500.
+- Fix Issue #508: update logic for background image download.
+
 20190617-beta1
 - Fix Issue #500: add 'google_forms' for embed provider and update max page parser.
 - Update the embedData parser to use configuration in content_provider.json.
