--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,11 @@
-20191105-beta2
+20191106-beta3
 - Fix Issue #550: update download by tag.
 - Fix Issue #548: encode filename to utf-8 if required.
 - Fix Issue #540: skip password protected zip file checking.
 - Update #505: update error message for reCAPTCHA.
 - Implement #544: support for FANBOX post type = entry.
 - Fix Issue #556: update parser for image and member.
+- Fix Issue #558: update write json function.
 
 20190919
 - Fix Issue #530: update OAuth login header.
