--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20200226-beta1
+- Fix Issue #641: update API endpoints for Pixiv FANBOX.
+
 20200125 - Happy CNY 2020!
 - Update #623: change default local to '', if exists then use the current locale.
 - Update test cases.
