--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+202000404-beta1
+- Try to fix #658: login detection.
+- Try to fix #654: explicitly call close() when writing config.ini.tmp
+- Implement #652: Enable filter by bookmark count for Pixiv Premium.
+- Merged #656 (#659) by amatuerCoder: Download fanbox articles in HTML.
+  - set writeHtml = True to enable.
+  - modifieable template based on pattern.html
+- Merged #660 by wmjdgla: Simplified print_progress and fixed jerky progress bar for indeterminate case
+- Merged #647 by Alex: Refactor sanitize_filename in PixivHelper
+
 20200307
 - Fix Issue #648: Can't download Ugoiras when "downloadresized" is active.
 
