--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+20200428-beta1
+- Merged FANBOX download enhancement (#680) by amatuerCoder.
+- Merged Optimize Query `insertMangaImage` & Typo Fix (#678) by Jared Shields.
+- Merged Simplify(?) codes with reflection(?) thoughts (#676) by amatuerCoder.
+
 202000424
 - Try to fix #658, #662: login detection.
 - Try to fix #654: explicitly call close() when writing config.ini.tmp
