--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
-20200428-beta1
+20200430-beta2
 - Merged FANBOX download enhancement (#680) by amatuerCoder.
 - Merged Optimize Query `insertMangaImage` & Typo Fix (#678) by Jared Shields.
 - Merged Simplify(?) codes with reflection(?) thoughts (#676) by amatuerCoder.
+- Fix Issue #684: cannot use pixiv and fanbox cookie together.
+- Fix Issue #687: merged When artist is None (#683) by amatuerCoder.
 
 202000424
 - Try to fix #658, #662: login detection.
