--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,13 @@
-20200430-beta2
+20200501-beta3
 - Merged FANBOX download enhancement (#680) by amatuerCoder.
 - Merged Optimize Query `insertMangaImage` & Typo Fix (#678) by Jared Shields.
 - Merged Simplify(?) codes with reflection(?) thoughts (#676) by amatuerCoder.
 - Fix Issue #684: cannot use pixiv and fanbox cookie together.
 - Fix Issue #687: merged When artist is None (#683) by amatuerCoder.
+- Merged Indent/print-out adjustment & new method to update FANBOX cookie (#694) by amatuerCoder.
+- Implement #197: new option 'b' to download from batch_job.json
+  See https://github.com/Nandaka/PixivUtil2/wiki/Using-Batch-Job-(Experimental) for the sample template.
+- Refactor out codes for handling batch job.
 
 202000424
 - Try to fix #658, #662: login detection.
