--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20200503-beta1
+- Fix #697 bookmark filtering for premium user
+
 20200502
 - Merged FANBOX download enhancement (#680) by amatuerCoder.
 - Merged Optimize Query `insertMangaImage` & Typo Fix (#678) by Jared Shields.
