--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-20201017-beta2
+20201018-beta3
 - add cmd logging when converting ugoira.
 - Implement #406: add option 13: download by manga series
   - Specific for filenameMangaFormat in Manga Series mode (option 13):
@@ -14,6 +14,7 @@
 - Implement #812: handle different Sketch and Pixiv artist id.
   - add new filename format `%sketch_member_id%` for PixivSketch
 - Fix Issue #822: Update parser for user's image bookmark.
+- Fix Issue #827: Update parser to NOT use AppAPI/oAuth to get member token.
 
 20201006
 - Implement #797: reload blacklist on after reloading main menu.
